# Frost-for-Blender

./: .gitignore  README.md  build.bat
blender_frost_adapter/: CMakeLists.txt
blender_frost_adapter/src/: adapter.cpp  frost_interface.cpp  frost_interface.hpp  frost_native_api.cpp  frost_native_api.h  gpu_backend.cpp  gpu_backend.hpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_buffer_probe.cpp  vulkan_buffer_probe.hpp  vulkan_compute_probe.cpp  vulkan_compute_probe.hpp  vulkan_compute_shader.cpp  vulkan_compute_shader.hpp  vulkan_probe.cpp  vulkan_probe.hpp
documentations/: CHANGELOG.md  README.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md  VERSIONING_WORKFLOW.md
frost_blender_addon/: INSTALL.txt  README.md  __init__.py  native_bridge.py  operator.py  ui.py
